# dns66

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: publish.yml
app/: build.gradle.kts  proguard-rules.pro
app/config/detekt/: detekt.yml
app/src/main/: AndroidManifest.xml
app/src/main/java/org/jak_linux/dns66/: Configuration.kt  Dns66Application.kt  FileHelper.kt  ItemActivity.kt  MainActivity.kt  ParcelUtil.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_refresh.xml  ic_state_allow.xml  ic_state_deny.xml  ic_state_ignore.xml  ic_warning.xml  icon_full.xml
app/src/main/res/values/: color.xml  strings.xml  theme.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-et/: strings.xml
app/src/main/res/values-fi/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-nb/: strings.xml
app/src/main/res/values-night/: color.xml
app/src/main/res/values-nl/: strings.xml
app/src/main/res/values-pl/: strings.xml
app/src/main/res/values-pt-rBR/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-tr/: strings.xml
app/src/main/res/values-zh/: strings.xml
baselineProfile/: build.gradle.kts
gradle/: libs.versions.toml
libnet/: Cargo.toml
libnet/src/: lib.rs
metadata/en-US/: full_description.txt  short_description.txt
(+147 files in other folders)
