[package]
name = "net"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "net"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
etherparse = "0.16.0"
libc = "0.2.169"
log = "0.4.22"
simple-dns = "0.9.2"
syscalls = { version = "0.6.18", features = ["aarch64", "arm", "x86", "x86_64"] }
uniffi = { version = "0.28.3", features = ["cli"] }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"
